# b_led

./: .gitignore  .gitmodules  b_led.sln  b_led.sln.DotSettings
b_led/: Audio.cs  Clip.cs  Color.cs  Fixture.cs  FixtureTemplates.cs  Fixtures.cs  Graphics.cs  Greg.cs  Math.cs  Pattern.cs  Patterns.cs  Program.cs  Project.cs  Push2.cs  Resources.cs  Time.cs  Utils.cs  Widgets.cs  Windows.cs  b_led.csproj
b_led.native/: b_led.native.csproj
b_led.native/cimgui_glfw_opengl3/: CMakeLists.txt
b_led/Interop/: ImGuiInternal.cs  cimgui.cs  win32.cs
b_led/Misc/: DataContractJsonTypeInfoResolver.cs  JetBrainsAnnotations.cs  JsonConverters.cs  JsonSnakeCaseNamingPolicy.cs
b_led/assets/: IconsFontAwesome6.cs  IconsFontAwesome6.data.cs
b_led/assets/shaders/: fixture_preview.frag  fixture_preview.vert
b_led/resources/fonts/: IconsFontAwesome6.cs  IconsFontAwesome6.data.cs
b_led/resources/shaders/: fixture_preview.frag  fixture_preview.vert  world_preview.vert
led_matrix/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.defaults
led_matrix/src/: main.cpp
